syntax = "proto3";

option go_package = "./pb";

package pb;

//喜欢列表
message douyin_favorite_list_request {
  int64 user_id = 1; // 用户id
  //string token = 2; // 用户鉴权token
}

message douyin_favorite_list_response {
  //int32 status_code = 1; // 状态码，0-成功，其他值-失败
  //string status_msg = 2; // 返回状态描述
  repeated int64 video_list = 1; // 用户点赞视频列表
}

//点赞
message douyin_favorite_action_request {
  //string token = 1; // 用户鉴权token
  int64 user_id = 1; //用户id
  int64 video_id = 2; // 视频id
  int64 action_type = 3; // 1-点赞，2-取消点赞
}

message douyin_favorite_action_response {
  //int32 status_code = 1; // 状态码，0-成功，其他值-失败
  //string status_msg = 2; // 返回状态描述
}

//评论
message douyin_comment_action_request {
  //string token = 1; // 用户鉴权token
  int64 user_id = 1;
  int64 video_id = 2; // 视频id
  int64 action_type = 3; // 1-发布评论，2-删除评论
  optional string comment_text = 4; // 用户填写的评论内容，在action_type=1的时候使用
  optional int64 comment_id = 5; // 要删除的评论id，在action_type=2的时候使用
}

message douyin_comment_action_response {
  //int32 status_code = 1; // 状态码，0-成功，其他值-失败
  //optional string status_msg = 2; // 返回状态描述
  int64 comment = 1; // 评论成功返回评论内容，不需要重新拉取整个列表
}

//评论列表
message douyin_comment_list_request {
  //required string token = 1; // 用户鉴权token
  int64 video_id = 1; // 视频id
}

message douyin_comment_list_response {
  //required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  //optional string status_msg = 2; // 返回状态描述
  repeated int64 comment_list = 3; // 评论列表
}


message Comment {
  int64 id = 1; // 视频评论id
  User user =2; // 评论用户信息
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格式 mm-dd
}

message User {
  int64 id = 1; // 用户id
  string username = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

service interactsservice{
  //点赞
  rpc videoInteraction(douyin_favorite_action_request) returns(douyin_favorite_action_response);
  // 喜欢列表
  rpc videoInteractionList(douyin_favorite_list_request) returns(douyin_favorite_list_response);
  // 评论
  rpc videoCommentAction(douyin_comment_action_request) returns(douyin_comment_action_response);
  // 评论列表
  rpc videoCommentList(douyin_comment_list_request) returns(douyin_comment_list_response);
}