syntax = "proto3";

option go_package = "./pb";

package pb;

//model
message User{
    int64 id = 1; // 用户id
    string username = 2; // 用户名称
    int64 follow_count = 3; // 关注总数
    int64 follower_count = 4; // 粉丝总数
    bool is_follow = 5; // true-已关注，false-未关注
    string avatar = 6; //用户头像
    string background_image = 7; //用户个人页顶部大图
    string signature = 8; //个人简介
    int64 total_favorited = 9; //获赞数量
    int64 work_count = 10; //作品数量
    int64 favorite_count = 11; //点赞数量
}

//用户登录
message douyin_user_login_request {
    string username = 1; // 登录用户名
    string password = 2; // 登录密码
}
message douyin_user_login_response {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}

//用户注册
message douyin_user_register_request {
    string username = 1; // 注册用户名，最长32个字符
    string password = 2; // 密码，最长32个字符
}

message douyin_user_register_response {
    int64 user_id = 1; // 用户id
    string token = 2; // 用户鉴权token
}

//用户详细信息
message douyin_user_request {
    int64 user_id = 1; // 用户id
    //string token = 2; // 用户鉴权token
}
  
message douyin_user_response {
    User user = 1; // 用户信息
}

//获取用户Token
message GenerateTokenReq {
    int64 userId = 1;
}

message GenerateTokenResp {
    string accessToken = 1;
    int64  accessExpire = 2;
}


//Service
service usercenter{
    rpc login(douyin_user_login_request) returns(douyin_user_login_response);
    rpc register(douyin_user_register_request) returns(douyin_user_register_response);
    rpc getUserInfo(douyin_user_request) returns(douyin_user_response);
    rpc generateToken(GenerateTokenReq) returns(GenerateTokenResp);
}